--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8" />
     <!-- Site Title -->
-    <title>Metaloop</title>
+    <title>Metaloop Technologies</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700"
@@ -48,18 +48,17 @@
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li class="menu-has-children">
-                <a href="services.html">Services</a>
+                <a href="#">Services</a>
                 <ul>
+                  <li><a href="web-services.html">Web Development</a></li>
                   <li>
-                    <a href="wordpress-development.html"
-                      >Wordpress Development</a
+                    <a href="ecommerce-services.html">Ecommerce Services</a>
+                  </li>
+                  <li>
+                    <a href="socialmedia-services.html"
+                      >Social Media Services</a
                     >
                   </li>
-                  <li><a href="react-dev.html">React Development</a></li>
-                  <li><a href="php-dev.html">Php Development</a></li>
-                  <li><a href="html-dev.html">HTML Development</a></li>
-                  <li><a href="bootstrap.html">Bootstrap Development</a></li>
-                  <li><a href="database-mgt.html">Database Management</a></li>
                 </ul>
               </li>
               <li><a href="portfolio.html">Portfolio</a></li>
@@ -79,20 +78,20 @@
         <div class="row fullscreen align-items-center justify-content-between">
           <div class="col-lg-6 col-md-6 banner-left">
             <h6>We are developers</h6>
-            <h1>Welcome to Metaloop</h1>
+            <h1>We Work On Your Ideas</h1>
             <p>
               We are bunch of thinkers, Designers and techies on an aim to
-              delivering great Websites and E-commerce Websites to speed up your
-              business presence digitally. Whether you are a non-profit or a
-              growing business you know the impact a website can make in this
+              delivering great Websites and E-commerce Solutions to speed up
+              your business presence digitally. Whether you are a non-profit or
+              a growing business you know the impact a website can make in this
               era. Website give your company a digital identity.
             </p>
             <a href="portfolio.html" class="primary-btn text-uppercase"
               >View Our Work
             </a>
           </div>
-          <div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
-            <img class="img-fluid" src="img/hero-img.png" alt="" />
+          <div class="col-lg-6 col-md-6 banner-right d-flex">
+            <img class="img-fluid rounder" src="img/517.png" alt="" />
           </div>
         </div>
       </div>
@@ -185,83 +184,75 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="single-services">
-              <span
-                ><img src="img/wordpress.png" width="70" height="70"
-              /></span>
-              <a href="wordpress-development.html"
-                ><h4>Wordpress Development</h4></a
-              >
-              <p>
-                Take your business online with a robust CMS and the best
-                WordPress Development Services trusted by countless SMEs,
-                bloggers, and Fortune 500 companies
-              </p>
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+          <div class="col-lg-4 col-md-6 pb-5">
+            <div class="card h-100 rounder">
+              <img
+                src="img/d01-min.jpg"
+                class="card-img-top rounder"
+                alt="web"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Website Development</h5>
+                <p class="card-text">
+                  We have a dedicated & experienced team of developers that help
+                  to make a website that make your brand stand out. When we talk
+                  about Website Development it means a systematical process
+                  along with development of logical code which makes the things
+                  easier for the general human life
+                </p>
+                <a href="web-services.html" class="genric-btn primary rounder"
+                  >Know More</a
+                >
+              </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single-services">
-              <span><img src="img/react.png" width="70" height="70" /></span>
-              <a href="react-dev.html"><h4>React Development</h4></a>
-              <p>
-                Implement the best React and JavaScript practices to develop an
-                innovative presence on the digital platform with our React
-                Development Services.
-              </p>
+          <div class="col-lg-4 col-md-6 pb-5">
+            <div class="card h-100 rounder">
+              <a href="ecommerce-services.html"
+                ><img
+                  src="img/d02-min.jpg"
+                  class="card-img-top rounder"
+                  alt="ecomm"
+              /></a>
+              <div class="card-body">
+                <h5 class="card-title">E-Commerce Services</h5>
+                <p class="card-text">
+                  We provide a wide varity of services so that you can sell your
+                  products to more and more customers. Throught our ecommerce
+                  account management service we help you to manage your product
+                  inventory, order management, customer relationship management
+                  and online support.
+                </p>
+                <a
+                  href="ecommerce-services.html"
+                  class="genric-btn primary rounder"
+                  >Know More</a
+                >
+              </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single-services">
-              <span><img src="img/php.png" width="70" height="70" /></span>
-              <a href="php-dev.html"><h4>Php Development</h4></a>
-              <p>
-                We have excelled in a notable expertise in developing dynamic,
-                high-performance, & database-driven PHP solutions for your
-                business.
-              </p>
+          <div class="col-lg-4 col-md-6 pb-5">
+            <div class="card h-100 rounder">
+              <a href="socialmedia-services.html"
+                ><img src="img/d03.jpg" class="card-img-top rounder" alt="ssm"
+              /></a>
+              <div class="card-body">
+                <h5 class="card-title">Social Media Services</h5>
+                <p class="card-text">
+                  If you are a content creator and you have to post frequently
+                  on social media our services can help you to manage your
+                  social accounts on multiple plateform. Our dedicated account
+                  managers help you to reach more audience so you can create
+                  more content.
+                </p>
+                <a
+                  href="socialmedia-services.html"
+                  class="genric-btn primary rounder"
+                  >Know More</a
+                >
+              </div>
             </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single-services">
-              <span><img src="img/html.png" width="70" height="70" /></span>
-              <a href="html-dev.html"><h4>HTML Development</h4></a>
-              <p>
-                HTML5 development services and delivering secure, sustainable
-                and cross-platform web solutions for enterprise belonging to
-                different industry verticals.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single-services">
-              <span
-                ><img src="img/bootstrap.png" width="70" height="70"
-              /></span>
-              <a href="bootstrap.html"><h4>Bootstrap Development</h4></a>
-              <p>
-                We built essential interface components that make the entire
-                interface easier and make the navigation faster. Our developers
-                who are qualified in various domain-specific services.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single-services">
-              <span><img src="img/database.png" width="70" height="70" /></span>
-              <a href="database-mgt.html"><h4>Database Management</h4></a>
-              <p>
-                We offer support for various databases. Our team of certified
-                database experts is continually striving to improve processes
-                and give reliable solutions to customers.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-12 text-center pt-5">
-            <a href="services.html" class="primary-btn text-uppercase"
-              >Know More</a
-            >
           </div>
         </div>
       </div>
@@ -277,7 +268,7 @@
             <p>Projects Completed</p>
           </div>
           <div class="col-lg-3 col-md-6 single-fact">
-            <h1 class="counter">12</h1>
+            <h1 class="counter">30</h1>
             <p>Happy Clients</p>
           </div>
           <div class="col-lg-3 col-md-6 single-fact">
@@ -285,7 +276,7 @@
             <p>Cups of Coffee</p>
           </div>
           <div class="col-lg-3 col-md-6 single-fact">
-            <h1 class="counter">8</h1>
+            <h1 class="counter">10</h1>
             <p>Real Professionals</p>
           </div>
         </div>
@@ -432,7 +423,7 @@
               </div>
               <div class="desc">
                 <p>
-                  I Highly recommand metaloop dor their development services as
+                  I Highly recommand metaloop dor their dwvwlopmwnt services as
                   they delivered the project on time and the team is so
                   supporting & experienced in their work of design and
                   development.
@@ -484,7 +475,7 @@
               </p>
               <p>Let us be social</p>
               <div class="footer-social d-flex align-items-center">
-                <a href="https://www.facebook.com/Metaloop-Technologies-102723648932975"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="https://twitter.com/MetaloopT"
                   ><i class="fa fa-twitter"></i
                 ></a>
@@ -501,7 +492,6 @@
               <div class="">
                 <ul class="unordered-list">
                   <a class="whitolo" href="about.html"><li>About</li></a>
-                  <a class="whitolo" href="services.html"><li>Services</li></a>
                   <a class="whitolo" href="portfolio.html"
                     ><li>Portfolio</li></a
                   >
@@ -522,23 +512,20 @@
               <h4>Our Services</h4>
               <div class="">
                 <ul class="unordered-list">
-                  <a class="whitolo" href="wordpress-development.html"
-                    ><li>Wordpress Development</li></a
+                  <a class="whitolo" href="webdev.html"
+                    ><li>Website Development</li></a
                   >
-                  <a class="whitolo" href="react-dev.html"
-                    ><li>React Development</li></a
+                  <a class="whitolo" href="ecommerce-web-development.html"
+                    ><li>Ecommerce Development</li></a
                   >
-                  <a class="whitolo" href="php-dev.html"
-                    ><li>Php Development</li></a
+                  <a class="whitolo" href="socialmedia-services.html"
+                    ><li>Social Media Services</li></a
                   >
-                  <a class="whitolo" href="html-dev.html"
-                    ><li>HTML Development</li></a
+                  <a class="whitolo" href="amzservices.html"
+                    ><li>Ecommerce Services</li></a
                   >
-                  <a class="whitolo" href="bootstrap.html"
-                    ><li>Bootstrap Development</li></a
-                  >
-                  <a class="whitolo" href="database-mgt.html"
-                    ><li>Database Management</li></a
+                  <a class="whitolo" href="amzservices.html"
+                    ><li>Amazon Ecommerce Services</li></a
                   >
                 </ul>
               </div>
@@ -552,13 +539,14 @@
                   <i class="fa fa-map-marker"></i> Saket, Delhi, India
                 </li>
                 <a class="whitolo" href="tel:9560183252">
-                <li>
-                  <i class="fa fa-phone"></i> +91-9560183252
-                </li></a>
+                  <li><i class="fa fa-phone"></i> +91-9560183252</li></a
+                >
                 <a class="whitolo" href="mailto:metalooptechnologies@gmail.com">
-                <li>
-                  <i class="fa fa-envelope"></i> metalooptechnologies@gmail.com
-                </li></a>
+                  <li>
+                    <i class="fa fa-envelope"></i>
+                    metalooptechnologies@gmail.com
+                  </li></a
+                >
               </ul>
             </div>
           </div>
@@ -566,6 +554,25 @@
       </div>
     </footer>
     <!-- End footer Area -->
+
+    <!------- social icon code start here ------->
+    <section id="social-icons">
+      <a href="https://www.facebook.com/metalooptechnologies/" target="_blank"
+        ><img src="img/facebook.png"
+      /></a>
+      <a href="https://www.instagram.com/metalooptechnologies/" target="_blank"
+        ><img src="img/insta.png"
+      /></a>
+      <a href="https://twitter.com/MetaloopT" target="_blank"
+        ><img src="img/twitter.png"
+      /></a>
+      <a
+        href="https://www.linkedin.com/company/metaloop-technologies"
+        target="_blank"
+        ><img src="img/linkedin.png"
+      /></a>
+    </section>
+    <!-- Code end here -->
 
     <script src="js/vendor/jquery-2.2.4.min.js"></script>
     <script src="js/popper.min.js"></script>
