--- a/index.html
+++ b/index.html
@@ -509,14 +509,13 @@
                   <i class="fa fa-map-marker"></i> Saket, Delhi, India
                 </li>
                 <a class="whitolo" href="tel:9560183252">
-                  <li><i class="fa fa-phone"></i> +91-9560183252</li></a
+                  <li><i class="fa fa-phone"></i> +91-8802873644</li></a
                 >
                 <a class="whitolo" href="mailto:metalooptechnologies@gmail.com">
                   <li>
                     <i class="fa fa-envelope"></i>
-                    metalooptechnologies@gmail.com
-                  </li></a
-                >
+                    Contact@metalooptechnologies.com
+                  </li></a>
               </ul>
             </div>
           </div>
